--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "is-ci || husky install"
   },
   "author": "kaleem qasim",
   "license": "ISC",
@@ -22,17 +23,21 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "husky": "^8.0.1",
+    "is-ci": "^3.0.1",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
     "prisma": "^4.4.0"
   },
   "_moduleAliases": {
     "@root": ".",
-    "@src"      : "src",
-    "@controllers"      : "src/controllers",
-    "@middlewares" : "src/middlewares",
-    "@utils"  : "src/utils",
-    "@services"  : "src/services",
-    "@locales"  : "src/locales",
-    "@prisma_root" : "src/prisma",
-    "@routes" : "src/routes"
+    "@src": "src",
+    "@controllers": "src/controllers",
+    "@middlewares": "src/middlewares",
+    "@utils": "src/utils",
+    "@services": "src/services",
+    "@locales": "src/locales",
+    "@prisma_root": "src/prisma",
+    "@routes": "src/routes"
   }
 }
