--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.25.0",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "prisma": "^4.4.0"
@@ -39,5 +41,13 @@
     "@locales": "src/locales",
     "@prisma_root": "src/prisma",
     "@routes": "src/routes"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --cache --fix"
+    ],
+    "*.{json,scss}": [
+      "prettier --write ."
+    ]
   }
 }
